--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 curlify==2.2.1
@@ -5,9 +6,12 @@ idna==3.10
 iniconfig==2.0.0
 packaging==24.1
 pluggy==1.5.0
+pydantic==2.9.2
+pydantic_core==2.23.4
 pytest==8.3.3
 requests==2.32.3
 retrying==1.3.4
 six==1.16.0
 structlog==24.4.0
+typing_extensions==4.12.2
 urllib3==2.2.3
