--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 curlify==2.2.1
+Faker==33.0.0
 idna==3.10
 iniconfig==2.0.0
 packaging==24.1
@@ -10,6 +11,7 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 PyHamcrest==2.1.0
 pytest==8.3.3
+python-dateutil==2.9.0.post0
 requests==2.32.3
 retrying==1.3.4
 six==1.16.0
