--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -44,6 +44,9 @@ jobs:
           path: allure-results
           retention-days: 1
 
+      - run: ls -la
+      - run: cd allure-results && ls -la
+
   test:
     runs-on: ubuntu-latest
     needs: download-history
@@ -67,6 +70,9 @@ jobs:
         run: |
           pytest --alluredir=allure-results --disable-warnings
         continue-on-error: true
+
+      - run: ls -la
+      - run: cd allure-results && ls -la
 
       - name: Archive allure results
         uses: actions/upload-artifact@v3
