add swagger coverage

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ typing_extensions==4.12.2
 urllib3==2.2.3
 vyper-config==1.2.1
 watchdog==6.0.0
+swagger-coverage @ https://github.com/sergey-mazanik/swagger-coverage-py/archive/refs/heads/master.zip
