--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -35,7 +35,7 @@ jobs:
           https://api.github.com/repos/sergey-mazanik/dm_api_tests/actions/artifacts/$REPORT_ID/zip 
           -o pages.zip
       - run: mkdir allure-results && unzip artifacts.zip -d allure-results || true
-      - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history
+      - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history || true
       - run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results
       - name: Save allure results
         uses: actions/upload-artifact@v3
