--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -36,7 +36,7 @@ jobs:
           -o pages.zip
       - run: mkdir allure-results && unzip artifacts.zip -d allure-results || true
       - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history || true
-      - run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results
+      - run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results || true
       - name: Save allure results
         uses: actions/upload-artifact@v3
         with:
