--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -34,18 +34,18 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28"
           https://api.github.com/repos/sergey-mazanik/dm_api_tests/actions/artifacts/$REPORT_ID/zip 
           -o pages.zip
-      - run: mkdir allure-results && unzip artifacts.zip -d allure-results || true
-      - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history || true
-      - run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results || true
+      - run: mkdir allure-results && unzip artifacts.zip -d allure-results
+        continue-on-error: true
+      - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history
+        continue-on-error: true
+      - run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results
+        continue-on-error: true
       - name: Save allure results
         uses: actions/upload-artifact@v3
         with:
           name: allure-results
           path: allure-results
           retention-days: 1
-
-      - run: ls -la
-      - run: cd allure-results && ls -la
 
   test:
     runs-on: ubuntu-latest
@@ -70,9 +70,6 @@ jobs:
         run: |
           pytest --alluredir=allure-results --disable-warnings
         continue-on-error: true
-
-      - run: ls -la
-      - run: cd allure-results && ls -la
 
       - name: Archive allure results
         uses: actions/upload-artifact@v3
