--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -58,7 +58,17 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependecies
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+
+      - name: Set JAVA_HOME
+        run: |
+          echo "JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))" >> $GITHUB_ENV
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -68,8 +78,14 @@ jobs:
 
       - name: Run tests
         run: |
+          export JAVA_HOME=$JAVA_HOME
           pytest --alluredir=allure-results --disable-warnings
         continue-on-error: true
+
+      - name: Run coverage
+        if: ${{ always() }}
+        run: |
+          python -m packages.notifier.bot
 
       - name: Archive allure results
         uses: actions/upload-artifact@v3
