--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -93,6 +93,7 @@ jobs:
           name: allure-results
           path: allure-results
           retention-days: 1
+          merge-multiple: true
 
   generate-report:
     runs-on: ubuntu-latest
@@ -109,7 +110,7 @@ jobs:
         uses: actions/download-artifact@v4
       - run: allure generate -c allure-results -o _site
       - name: Store report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: _site
           path: _site
